# autosk

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  go.mod  go.sum
.cargo/: config.toml
.github/workflows/: ci.yml  gui.yml  publish.yml  release.yml  rust.yml
agents/: README.md
agents/code-reviewer/: README.md  package.json
agents/developer/: README.md  package.json
agents/generic-agent/: README.md  package.json
agents/task-validator/: README.md  package.json
cmd/autosk/: agent.go  agent_install_test.go  agent_test.go  assign.go  attach.go  attach_client_e2e_test.go  attach_e2e_test.go  autoinit.go  autoinit_test.go  block.go  client.go  client_test.go  comment.go  create.go  daemon.go  daemon_core.go  daemon_core_test.go  daemon_e2e_test.go  daemon_harness_test.go  daemon_uds_e2e_test.go  enroll.go  enroll_test.go  enterstep_err.go  exit.go  ext.go  ext_test.go  gc.go  golden_test.go  init.go  init_test.go  install.go  install_test.go  lazy.go  lazy_changelog_test.go  lazy_e2e_daemonup_test.go  lazy_e2e_test.go  lazy_getwd.go  list.go  main.go  metadata.go  (+27 more)
crates/autosk-core/: Cargo.toml  build.rs
crates/autosk-core/doltlite-shim/: README.md
crates/autosk-core/src/: agentnode.rs  agents_write.rs  bootstrap.rs  comments_write.rs  compactor.rs  ctx.rs  deps.rs  error.rs  executor.rs  ids.rs  lib.rs  meta.rs  metaverbs.rs  migrate.rs  pi.rs  pirunners.rs  pkg.rs  poller.rs  projectmgr.rs  read.rs  registry.rs  runner.rs  runstore.rs  scheduler.rs  signals.rs  store.rs  tasks.rs  tasksvc.rs  timefmt.rs  transcript.rs  verbs.rs  wfcrud.rs  wfengine.rs  worktree.rs
crates/autosk-core/tests/: e2e_workflow.rs  executor.rs  format_compat.rs  gc_readable.rs  gc_stress.rs  pi_wire.rs  read_golden.rs  registry.rs  schema_golden.rs  transcript.rs  verbs.rs  worktree_real.rs
crates/autosk-core/tests/common/: mod.rs
crates/autosk-core/tests/fixtures/go-0.10.8/: README.md  db  tasks.golden
crates/autosk-core/tests/fixtures/read/: agents.json  comments_ask000001.json  jobs.json  signals_ask000001.json  task_get_ask000001.json  task_get_ask000003.json  task_list_open.json  task_ready.json  workflows.json
crates/autosk-proto/: Cargo.toml
crates/autosk-proto/src/: lib.rs  rpc.rs  wire.rs
crates/autosk-proto/tests/: golden.rs
crates/autoskd/: Cargo.toml
crates/autoskd/src/: daemon.rs  lib.rs  main.rs  notify.rs  server.rs  token.rs  uds.rs
crates/autoskd/tests/: job_control.rs  rpc.rs  rpc_write.rs
daemon/: README.md  package.json  tsconfig.base.json
daemon/core/: package.json
daemon/sdk/: README.md  package.json  tsconfig.json
docs/: .gitattributes  attach.md  cli.md  concepts.md  daemon-tutorial.md  daemon.md  extensions-tutorial-claude.md  extensions-tutorial.md  extensions.md  gui-release.md  lazy.md  shipped.md  workflows.md
docs/examples/: feature-dev-workflow.json
docs/notes/: feature-doc-inventory.md  pi-rpc-contract.md  workflow-example.json  workflow-isolated-example.json  workflows-schema.md
docs/plans/: 20260513-Impl-Plan.md  20260513-Init-Plan.md  20260517-Daemon-Plan.md  20260517-Workflows-Plan.md  20260518-Agent-Packages.md  20260518-Daemon-UDS-Plan.md  20260519-Attach-Plan-v2.md  20260519-Attach-Plan.md  20260519-Lazy-Plan.md  20260520-Lazy-Impl-Plan.md  20260520-Step-Visit-Limits.md  20260521-Short-Statuses.md  20260521-Workflow-Update-Isolation.md  20260521-Worktree-Isolation.md  20260522-job-detail-redesign.md  20260522-task-id-format.md  20260607-Rust-Daemon-Tauri-GUI.md  20260609-tauri-gui-redesign.md  20260612-Bun-Daemon-Extensions.md  20260614-Inline-Step-Agents.md  20260615-Isolation-Lifecycle-StatusDriven.md  20260615-ext-command-group-and-update.md  20260615-gui-extension-browser.md  20260617-Interactive-Sessions.md  20260617-streaming-partial-messages.md  20260618-Claude-Code-Agent.md  20260618-Docker-Isolation.md  20260618-iphone-compact-layout.md  20260619-Docker-Isolation-Claude-MCP.md  20260622-Isolation-Abolition.md  20260623-CI-Publishing-And-App-Builds.md  20260624-Landing-Website.md  20260625-extension-hot-reload.md  20260628-gui-transcript-folding.md
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/runtime/: README.md  package.json  tsconfig.json
extension/sdk/: README.md  package.json  tsconfig.json
extension/src/: actions.ts  autosk-cli.ts  cli.ts  comment.ts  index.ts  render.ts  schema.ts  step.ts  task.ts  tool.ts  types.ts
extension/test/: smoke.ts
gui/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
gui/scripts/: check-ipc-discipline.mjs
gui/src/: App.tsx  main.tsx  types.ts
gui/src-tauri/: Cargo.toml  Info.ios.plist  Info.plist  entitlements.plist  macos-release.conf.json  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: .gitattributes  Assets.car  icon.icns
gui/src-tauri/icons/src/autosk.icon/: icon.json
gui/src-tauri/src/: commands.rs  lib.rs  main.rs  npm.rs  settings.rs  state.rs
gui/src-tauri/src/client/: local.rs  mod.rs  remote.rs  rpc.rs
gui/src-tauri/tests/fixtures/: npm-search.json
internal/agent/: agent.go  config.go  config_test.go  store.go  store_test.go
internal/bootstrap/: bootstrap.go  bootstrap_test.go  feature-dev-generic.json
internal/buildinfo/: buildinfo.go
internal/changelog/: embed.go  (+4 more)
pi-tools/: README.md  package.json  tsconfig.json
scripts/: bundle-extensions.sh  changelog-section.sh  clean-layout-test.sh  fetch-doltlite.sh  flatten-ios-icon.swift  install-gui-ios.sh  make-forward-compat-fixture.sh  migrate-v11-to-v12.sh  package-autoskd.sh  pi-rpc-probe.sh  publish-extensions.sh  sync-gui-ios-icons.sh  update-gui-icons.sh
website/: README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
(+568 files in other folders)
