[workspace]
resolver = "2"
members = [
    "crates/autosk-core",
    "crates/autoskd",
    "crates/autosk-proto",
]

# Informational: the doltlite release the Rust side links against. Unlike the Go
# binary (still on 0.10.8 — see Makefile), the Rust core targets 0.11.8, where
# the GC regressions that forced the Go pin are fixed. The canonical pin lives in
# crates/autosk-core/build.rs (DEFAULT_DOLTLITE_VERSION, overridable via the
# DOLTLITE_VERSION env); this block just mirrors it for discoverability.
[workspace.metadata.doltlite]
version = "0.11.8"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# rusqlite WITHOUT the `bundled` feature: libsqlite3-sys links the external
# doltlite-provided sqlite (see crates/autosk-core/build.rs), not a compiled-in
# amalgamation. `bundled` is opt-in, so plain rusqlite already does the right
# thing here.
rusqlite = "0.32"
