[package]
name = "autosk-proto"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# autosk-proto is the single source of truth for the JSON-RPC wire contract
# (plan §5). It is pure serde types — no doltlite, no I/O — so it compiles with
# plain `cargo build` and is shared by autoskd (server) and mirrored by the Go
# and Tauri clients.
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_json = "1"
