[package]
name = "autoskd"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Phase 0 stub binary. The JSON-RPC server (UDS + TCP), poller, scheduler and
# the thin adapter over autosk-core arrive in Phases 1-3. For now it only
# proves the workspace links autosk-core (and therefore doltlite) end to end.
[dependencies]
autosk-core = { path = "../autosk-core" }
