[package]
name = "autoskd"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

# Phase 1: the JSON-RPC server (UDS, single-instance) serving the read surface
# over autosk-core. TCP/auth, executor and poller arrive in Phases 2-3.
[dependencies]
autosk-core = { path = "../autosk-core" }
autosk-proto = { path = "../autosk-proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
